[gd_scene load_steps=4 format=3 uid="uid://pg51jsluep64"]

[ext_resource type="Script" uid="uid://co2d8aabk74x7" path="res://goblin_band/band.gd" id="1_g05wq"]
[ext_resource type="Theme" uid="uid://c6hyu8hna1sh7" path="res://ui-scenes/default.tres" id="1_vofrv"]
[ext_resource type="FontFile" uid="uid://dmmb45mnthq73" path="res://ui-scenes/Alegreya-VariableFont_wght.ttf" id="3_6fs2r"]

[node name="Band" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g05wq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.588235, 0.423529, 0.423529, 1)

[node name="HeadingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -403.0
offset_top = 48.0
offset_right = 406.0
offset_bottom = 122.0
grow_horizontal = 2
theme = ExtResource("1_vofrv")
theme_override_font_sizes/font_size = 64
text = "Select your band of goblins"

[node name="ForageButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 309.0
offset_top = 245.0
offset_right = 614.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vofrv")
theme_override_font_sizes/font_size = 80
text = "Forage!"

[node name="BandSizeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 560.5
offset_top = 151.0
offset_right = 893.5
offset_bottom = 193.0
theme = ExtResource("1_vofrv")
text = "?/? goblins selected"

[node name="ButtonsHFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 214.0
offset_right = 974.0
offset_bottom = 1014.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="ValidationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 940.0
offset_top = 895.0
offset_right = 1427.0
offset_bottom = 982.0
theme = ExtResource("1_vofrv")
text = "Please select X goblins before foraging"
horizontal_alignment = 1
autowrap_mode = 2

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 998.0
offset_top = 261.0
offset_right = 1391.0
offset_bottom = 689.0
theme = ExtResource("1_vofrv")
theme_override_fonts/font = ExtResource("3_6fs2r")
theme_override_font_sizes/font_size = 30
text = "Goblin information goes here"
autowrap_mode = 2

[connection signal="pressed" from="ForageButton" to="." method="_on_forage_button_pressed"]
